@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.395 2006/09/19 20:01:13 jetmore Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.396 2006/09/22 08:41:59 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -34,7 +34,8 @@ PH/03 On Solaris, an unexpectedly close socket (dropped connection) can
 PH/04 Applied Nico Erfurth's refactoring patch to tidy up mime.c
       (quoted-printable decoding).
 
-PH/05 Applied Nico Efrurth's refactoring patch to tidy up spool_mbox.c.
+PH/05 Applied Nico Efrurth's refactoring patch to tidy up spool_mbox.c, and
+      later the small subsequent patch to fix an introduced bug.
 
 PH/06 Installed the latest Cygwin Makefile from the Cygwin maintainer.
 
